--- a/exercise1.html
+++ b/exercise1.html
@@ -9,6 +9,7 @@
 
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
         <p>This is a new paragraph</p>
+        <p>This is a change in 'feature' branch</p>
 
         <ul>
             <li>This is an unordered list.</li>
